@@ -21,6 +21,9 @@
 
   * Add extra constraints in sqlite cache. (Jelmer Vernooij)
 
+  * New 'bzr hg-import' command similar to 'bzr svn-import' and 
+    'bzr git-import'. (Jelmer Vernooij)
+
  BUG FIXES
 
   * Mark as compatible with Bazaar 2.1. (Jelmer Vernooij)
